# LagLens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/laglens/: __init__.py  cli.py  models.py  probes.py  processes.py  recommendations.py
tests/: test_parsers.py  test_recommendations.py
