[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laglens"
version = "0.1.0"
description = "Open-source gaming latency diagnostics for ping, jitter, packet loss, and route checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "LagLens contributors" }
]
keywords = ["gaming", "latency", "ping", "jitter", "packet-loss", "network"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
process = ["psutil>=5.9,<8"]

[project.scripts]
laglens = "laglens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
